--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "fs-extra": "^3.0.0",
-    "node-tar.gz": "^1.0.0"
+    "fs-extra": "7.0.1",
+    "tar": "4.4.8"
   },
   "devDependencies": {}
 }
